--- a/frontend/nextjs-app/package.json
+++ b/frontend/nextjs-app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "predev": "npm run typegen",
-    "dev": "next --turbo",
+    "dev": "next dev",
     "prebuild": "npm run typegen",
     "build": "next build",
     "start": "next start",
