--- a/frontend/nextjs-app/package.json
+++ b/frontend/nextjs-app/package.json
@@ -28,6 +28,7 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-to-pdf": "^2.0.0",
     "sanity": "^3.74.0",
     "sonner": "^1.7.0",
     "styled-components": "^6.1.13",
